Fixing car class methods.